画像を動かす設定

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <title>Jump Game</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="title">Block Jump</div>
+
     <div class="game">
-        <div id="character"></div>
-        <div id="block"></div>
+        <div id="character"><img src="zenitsu.png" class="image"></div>
+        <div id="block"><img src="oni.png" class="image2"></div>
     </div>
-    <p>Score: <span id="scoreSpan"></span></p>
+    <p class="score">Score: <span id="scoreSpan"></span></p>
 </body>
 <script src="script.js"></script>
 </html>
