スコアの表示場所を変更

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="title">Block Jump</div>
+    <div class="title">Dinosaur Jump</div>
 
     <div class="game">
-        <div id="character"><img src="zenitsu.png" class="image"></div>
-        <div id="block"><img src="oni.png" class="image2"></div>
+        <div id="character"><img src="images/genshi.png" class="image"></div>
+        <div id="block"><img src="images/dinosaur.png" class="image2"></div>
+        <p class="score">Score: <span id="scoreSpan"></span></p>
     </div>
-    <p class="score">Score: <span id="scoreSpan"></span></p>
+  
 </body>
 <script>let character = document.getElementById("character");
     let block = document.getElementById("block");
